--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cure_dao_unified_health_api",
+  "name": "curedao-api",
   "version": "0.0.1",
   "description": "A community-owned platform for crowdsourcing clincal research",
   "license": "GNU General Public License v3 (GPL-3)",
